Bug 262385 - [WGSL] Override initializers should not be serialized
Summary: [WGSL] Override initializers should not be serialized
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-09-29 11:20 PDT by Tadeu Zagallo
Modified: 2023-10-02 01:41 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2023-09-29 11:20:39 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-09-29 11:22:04 PDT
<rdar://problem/116246863>
Comment 2 Tadeu Zagallo 2023-09-29 11:25:32 PDT
Pull request: https://github.com/WebKit/WebKit/pull/18422
Comment 3 EWS 2023-10-02 01:41:38 PDT
Committed 268718@main (1539889e57a3): <https://commits.webkit.org/268718@main>

Reviewed commits have been landed. Closing PR #18422 and removing active labels.